# ros_sync_evaluation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
config/: pmu_config.yaml
launch/: component_container.launch.py  evaluation.launch.py
scripts/: calc_latency.py  rtss2025bp_paper_fig_parser.ipynb  run_with_rt_priority.sh  visualize_latency.py
src/: source_publisher.cpp  subscribe_publisher.cpp  sync_subscriber.cpp
src/custom_msg/: CMakeLists.txt  package.xml
src/custom_msg/msg/: HeaderExtraStamp.msg
src/nodes_for_evaluation/: CMakeLists.txt  README.md  package.xml  source_publisher.cpp  subscribe_publisher.cpp  sync_subscriber.cpp
